(fix) fixed search bar on mobile and added a padding for hot ad section

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,6 +10,7 @@
   min-height: 60vh;
   align-items: center;
   justify-content: space-evenly;
+  padding: 20px 5px;
 }
 
 .introduction {
